# ray-quickstart

./: .autoenv  .autoenv.leave  .gitignore  LICENSE.txt  Pipfile  Pipfile.mac  README.md  environment.mac.yaml  environment.yaml  main.py  pyproject.toml  setup.py
config/: logging.ini  ray_config.yaml
config/shakespeare_char/: model.yaml  train.yaml
docs/: HOWTO_create_pypi_package.txt  HOWTO_packaging.txt
models/shakespeare_char_model/: config.json
scripts/: configure_ray_runtime_env.sh  ray_start.bat  ray_start.sh  ray_stop.bat  ray_stop.sh  ubuntu_start.bat  ubuntu_stop.bat
setup/: setup.sh  setup_mac.sh  setup_ubuntu.sh  setup_windows.bat
setup/ubuntu/etc/: wsl.conf
setup/ubuntu/etc/systemd/system/: ray-cluster.service
src/config/: __init__.py
src/data/: dataset_util.py  gpt2_dataset.py  storage_manager.py
src/log/: __init__.py
src/models/: gpt2.py  model_base.py
src/ray_quickstart/: __init__.py  init.py  monkey_patch.py  rsync_syncer.py
src/ray_quickstart/util/: __init__.py  debug.py  platform.py
src/training/: gpt2_trainer_initializer.py  huggingface_trainer_initializer_base.py  trainer.py  trainer_initializer_base.py
src/util/: platform.py
