[build-system]
requires = ['setuptools >= 62.4.0', 'setuptools_scm[toml] >= 7.0.5']
build-backend = 'setuptools.build_meta'

[project]
name = 'ray-quickstart'
authors = [
    {name='Tuyen Truong', email='tuyen.truong@gmail.com'}
]
version= '0.1.5'
description='Wrapper around the Ray library to make it easier for you to set up your ML project to use Ray to train/tune your models remotely on a GPU-enabled computer'
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
    'ray[default]', 'torch',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
]

[project.urls]
'Homepage' = 'https://github.com/tuyentruong/ray_quickstart'
'Bug Tracker' = 'https://github.com/tuyentruong/ray_quickstart/issues'

[tool.setuptools]
script-files = [
    'scripts/ray_start.bat',
    'scripts/ray_start.sh',
    'scripts/ray_stop.bat',
    'scripts/ray_stop.sh',
    'scripts/ubuntu_start.bat',
    'scripts/ubuntu_stop.bat',
]

[tool.setuptools.packages.find]
where = ['src']

